bugfix : le dernier lien de la breadcrumb avait une width trop grande et avec le overflow du container ça faisait apparaitre une scrollbar horizontale

--- a/app/stylesheets/layouts/_layout_calcul_breadcrumb.sass
+++ b/app/stylesheets/layouts/_layout_calcul_breadcrumb.sass
@@ -49,7 +49,7 @@ div.breadcrumb_tab_content
       a
         +border-right-radius(0)
         +single-box-shadow(#000, 0px, 0px, 0px)
-        width: 100%
+        width: 96%
     li.tab_before
       +background-image(linear-gradient($color-tab-selected-start, $color-tab-selected-end))
       a
